# advent_of_code_2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: cicd.yaml
docs/: Makefile
docs/source/: api_reference.rst  conf.py  index.rst
src/advent_of_code_2024/: __init__.py  day05.py  day06.py  day07.py  day08.py  day09.py  main.py
src/advent_of_code_2024/utils/: logger.py
tests/: test_advent_of_code_2024.py
